--- a/Codes/Index.html
+++ b/Codes/Index.html
@@ -87,6 +87,8 @@ Web Programming-->
         log = document.getElementById('login_submit')
         signup = document.getElementById('signup_submit')
 
+        name = document.getElementById('username')
+
         login_button.addEventListener('click', () =>{
             login.style.display='contents';
             welcome.style.display='none';
